# pokemon

./: Overview.md  README.md  checklist.md  paper.md  patch.diff  patch.txt
sr-fbam-mvp/: .gitignore  Pokemon Blue.gb.ram  QUICKSTART.md  README.md  SR_FBAM_ARCHITECTURE_DIAGRAM.txt  SR_FBAM_ARCHITECTURE_OVERVIEW.md  debug_controller.py  debug_controller_flow.py  debug_gpt5.py  debug_simple.py  naming_snapshot.npy  naming_snapshot_0.npy  observations.jsonl  pyproject.toml  requirements.txt  run_log.txt  run_log_10.txt  run_log_1000.txt  run_log_200.txt  run_log_3.txt  run_log_3b.txt  run_log_50.txt  tmp_action.json  tmp_state.json  trace.jsonl
sr-fbam-mvp/config/: metrics_spec.yaml
sr-fbam-mvp/configs/: train_plan.yaml
sr-fbam-mvp/docs/: DATA_INGESTION.md  ENVIRONMENT_SETUP.md  OVERNIGHT_RUN_OPERATOR_RUNBOOK.md  OVERWORLD_M0_M2_CHECKLIST.md  PLANLET_MIGRATION_CHECKLIST.md  PLANLET_SCHEMA.md  SELF_DISTILLATION.md  SRFBAM_BATTLE_SYSTEM.md  TELEMETRY_PIPELINE.md  TRAIN_PLAN_CURRICULUM.md  naming_overhaul_plan.md  telemetry_overworld_schema.json  telemetry_schema.json
sr-fbam-mvp/notebooks/: 02_demo_inference.ipynb
sr-fbam-mvp/results/: dataset_v2_validation.json
sr-fbam-mvp/runs/: milestone4_test.jsonl  milestone4_test.meta.json  milestone4_test.parquet  overnight_20250122_0650.meta.json  overnight_prep.jsonl  overnight_prep.meta.json  test_cpu.jsonl  test_debug.jsonl  test_log.jsonl  test_run.jsonl  test_run.meta.json  test_run.parquet  test_short.jsonl  test_short.meta.json  test_visual.jsonl  test_visual.meta.json  test_visual_short.jsonl  (+1 more)
(+271 files in other folders)
